--- a/.github/workflows/validate-this-pull-request.yml
+++ b/.github/workflows/validate-this-pull-request.yml
@@ -6,5 +6,5 @@ on:
   pull_request:
 
 jobs:
-  call-validate-workflow:
+  validate-pull-request:
     uses: Lombiq/GitHub-Actions/.github/workflows/validate-submodule-pull-request.yml@dev
